--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "babelify": "^5.0.3",
     "browserify": "^9.0.3",
+    "chai": "^2.1.0",
     "gulp": "^3.8.11",
+    "gulp-jsx-coverage": "0.0.7",
     "gulp-rename": "^1.2.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
+    "jsdom": "^3.1.2",
     "react": "^0.12.2",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.4.0"
