--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "browserify": "^9.0.3",
     "chai": "^2.1.0",
     "gulp": "^3.8.11",
+    "gulp-babel": "^4.0.0",
+    "gulp-jshint": "^1.9.2",
     "gulp-jsx-coverage": "0.0.7",
+    "gulp-open": "^0.3.2",
     "gulp-rename": "^1.2.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "jsdom": "^3.1.2",
+    "jshint-stylish": "^1.0.1",
     "react": "^0.12.2",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.4.0"
