(feat) Add error handling in gulp tasks

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "start": "gulp develop",
     "test": "gulp test",
     "build": "gulp build"
+  },
+  "devDependencies": {
+    "gulp-util": "^3.0.4"
   }
 }
