--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "gulp-jsx-coverage": "0.0.7",
     "gulp-livereload": "^3.8.0",
     "gulp-open": "^0.3.2",
-    "gulp-rename": "^1.2.0",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "jsdom": "^3.1.2",
     "jshint-stylish": "^1.0.1",
     "react": "^0.12.2",
+    "recursive-readdir": "^1.2.1",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.4.0"
   },
