--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "gulp-uglify": "^1.1.0",
     "jsdom": "^3.1.2",
     "jshint-stylish": "^1.0.1",
+    "mockit": "^0.1.1",
+    "proxyquire": "^1.3.2",
     "react": "^0.12.2",
     "recursive-readdir": "^1.2.1",
     "vinyl-source-stream": "^1.0.0",
