--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "dependencies": {
     "babelify": "^5.0.3",
+    "backbone": "^1.1.2",
     "browserify": "^9.0.3",
     "chai": "^2.1.0",
     "colors": "^1.0.3",
@@ -20,10 +21,10 @@
     "gulp-uglify": "^1.1.0",
     "jsdom": "^3.1.2",
     "jshint-stylish": "^1.0.1",
-    "mockit": "^0.1.1",
     "proxyquire": "^1.3.2",
     "react": "^0.12.2",
     "recursive-readdir": "^1.2.1",
+    "sinon": "^1.12.2",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.4.0"
   },
