--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^0.12.2",
     "recursive-readdir": "^1.2.1",
     "sinon": "^1.12.2",
+    "testdom": "^1.0.0",
     "vinyl-source-stream": "^1.0.0",
     "watchify": "^2.4.0"
   },
