--- a/.jshintrc
+++ b/.jshintrc
@@ -5,7 +5,7 @@
   "camelcase"     : false,
   "curly"         : true,
   "eqeqeq"        : true,
-  "immed"         :  true,
+  "immed"         : true,
   "indent"        : 2,
   "latedef"       : true,
   "newcap"        : true,
@@ -14,7 +14,7 @@
   "regexp"        : true,
   "undef"         : true,
   "unused"        : true,
-  "strict"        : false,
+  "strict"        : true,
   "trailing"      : true,
   "smarttabs"     : true,
   "white"         : true,
