--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "react-backbone-demo",
+  "name": "frontend-build-demo",
   "version": "0.0.1",
   "description": "Demo of React+Backbone+Browserify+Mocha+JSDOM+Istanbul+JSX+ES6",
   "main": "js/app.jsx",
   "author": "Andrew Zey",
-  "license": "ISC",
   "dependencies": {
-    "babelify": "^5.0.3",
+    "babelify": "^5.0.4",
     "backbone": "^1.1.2",
     "browserify": "^9.0.3",
-    "chai": "^2.1.0",
+    "chai": "^2.1.1",
     "colors": "^1.0.3",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.0",
     "gulp-jshint": "^1.9.2",
-    "gulp-jsx-coverage": "0.1.0",
+    "gulp-jsx-coverage": "0.1.1",
     "gulp-livereload": "^3.8.0",
     "gulp-open": "^0.3.2",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
     "jshint-stylish": "^1.0.1",
-    "proxyquire": "^1.3.2",
+    "proxyquire": "^1.4.0",
     "react": "^0.12.2",
     "recursive-readdir": "^1.2.1",
-    "sinon": "^1.12.2",
-    "testdom": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0",
+    "sinon": "^1.13.0",
+    "test-cop": "git+ssh://git@github.com:minted/test-cop",
+    "testdom": "^1.0.1",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^2.4.0"
   },
   "scripts": {
@@ -33,7 +34,13 @@
     "test": "gulp test",
     "build": "gulp build"
   },
-  "devDependencies": {
-    "gulp-util": "^3.0.4"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:minted/frontend-build-demo.git"
+  },
+  "bugs": {
+    "url": "https://github.com/minted/frontend-build-demo/issues"
+  },
+  "homepage": "https://github.com/minted/frontend-build-demo",
+  "private": "true"
 }
