finalize lint task, replace jshint with eslint

--- a/package.json
+++ b/package.json
@@ -5,24 +5,22 @@
   "main": "js/app.jsx",
   "author": "Andrew Zey",
   "dependencies": {
+    "babel-eslint": "^1.0.14",
     "babelify": "^5.0.4",
     "backbone": "^1.1.2",
     "browserify": "^9.0.3",
     "chai": "^2.1.1",
-    "colors": "^1.0.3",
     "gulp": "^3.8.11",
     "gulp-babel": "^4.0.0",
-    "gulp-jshint": "^1.9.2",
+    "gulp-eslint": "^0.6.0",
     "gulp-jsx-coverage": "0.1.1",
     "gulp-livereload": "^3.8.0",
     "gulp-open": "^0.3.2",
     "gulp-streamify": "0.0.5",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
-    "jshint-stylish": "^1.0.1",
     "proxyquire": "^1.4.0",
     "react": "^0.12.2",
-    "recursive-readdir": "^1.2.1",
     "sinon": "^1.13.0",
     "test-cop": "git+ssh://git@github.com:minted/test-cop",
     "testdom": "^1.0.1",
