--- a/package.json
+++ b/package.json
@@ -5,26 +5,26 @@
   "main": "js/app.jsx",
   "author": "Andrew Zey",
   "dependencies": {
+    "babel-core": "^4.7.7",
     "babel-eslint": "^1.0.14",
-    "babelify": "^5.0.4",
+    "babel-loader": "^4.1.0",
     "backbone": "^1.1.2",
     "browserify": "^9.0.3",
     "chai": "^2.1.1",
     "gulp": "^3.8.11",
+    "gulp-connect": "^2.2.0",
     "gulp-eslint": "^0.6.0",
     "gulp-jsx-coverage": "0.1.1",
-    "gulp-livereload": "^3.8.0",
     "gulp-open": "^0.3.2",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
+    "jquery": "^2.1.3",
     "proxyquire": "^1.4.0",
     "react": "^0.12.2",
+    "run-sequence": "^1.0.2",
     "sinon": "^1.13.0",
     "test-cop": "git+ssh://git@github.com:minted/test-cop",
     "testdom": "^1.0.1",
-    "vinyl-source-stream": "^1.1.0",
-    "watchify": "^2.4.0"
+    "webpack": "^1.7.2"
   },
   "scripts": {
     "start": "gulp develop",
@@ -39,5 +39,5 @@
     "url": "https://github.com/minted/frontend-build-demo/issues"
   },
   "homepage": "https://github.com/minted/frontend-build-demo",
-  "private": "true"
+  "private": "true",
 }
