--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gulp-eslint": "^0.6.0",
     "gulp-jsx-coverage": "0.1.1",
     "gulp-open": "^0.3.2",
+    "gulp-sass": "^1.3.3",
+    "gulp-sourcemaps": "^1.5.0",
     "gulp-util": "^3.0.4",
     "jquery": "^2.1.3",
     "proxyquire": "^1.4.0",
@@ -39,5 +41,5 @@
     "url": "https://github.com/minted/frontend-build-demo/issues"
   },
   "homepage": "https://github.com/minted/frontend-build-demo",
-  "private": "true",
+  "private": "true"
 }
