--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "browserify": "^9.0.3",
     "chai": "^2.1.1",
     "gulp": "^3.8.11",
+    "gulp-clean": "^0.3.1",
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^0.6.0",
     "gulp-jsx-coverage": "0.1.1",
